--- a/Clase_7/css/style.css
+++ b/Clase_7/css/style.css
@@ -1,9 +1,24 @@
-
+/* Header */
 .header{
     text-align: center;
+    background-color: rgb(214, 37, 6);
+}
+.titulo{
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    background-color: rgb(112, 112, 111);
 }
 
+/* Main */
+
+.subtitulo{
+    background-color: rgb(214, 71, 19);
+}
+
+/* Footer */
+
 footer{
-    background-color: blue;
+    background-color: rgb(235, 39, 39);
     align-items: center;
 }
