--- a/Clase_7/css/style.css
+++ b/Clase_7/css/style.css
@@ -3,6 +3,11 @@
     text-align: center;
     background-color: rgb(214, 37, 6);
 }
+
+.luffon img{
+    height: 200px;
+}
+
 .titulo{
     text-align: center;
     text-transform: uppercase;
